--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -34,6 +34,12 @@ services:
     volumes:
       - ./build/:/client/dist/
 
+  app:
+    restart: on-failure
+    build: ./app
+    ports: 
+      - "3322:3322"
+
 
 networks:
   nginx-network:
